--- a/front/src/index.html
+++ b/front/src/index.html
@@ -11,6 +11,7 @@
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/css/datepicker3.css" rel="stylesheet">
   <link href="assets/css/styles.css" rel="stylesheet">
+  <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
   <!--Icons-->
   <script src="assets/js/lumino.glyphs.js"></script>
